conexao com banco e implementacao do swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
+server.error.include-exception=false
+
+server.error.include-stacktrace=never
+
+server.error.include-message=always
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/picpay_clone
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
