--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		 <dependency>
+	       <groupId>io.springfox</groupId>
+	       <artifactId>springfox-boot-starter</artifactId>
+	       <version>3.0.0</version>
+        </dependency>
+		<dependency>
+           <groupId>io.springfox</groupId>
+           <artifactId>springfox-swagger2</artifactId>
+           <version>3.0.0</version>
+         </dependency>
+		 <dependency>
+	       <groupId>io.springfox</groupId>
+	       <artifactId>springfox-swagger-ui</artifactId>
+	       <version>3.0.0</version>
+       </dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
