--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+picpayclone.jwt.expiration=86400000
+
+picpayclone.jwt.secret="73a47339e62ad7e861b2c1248692d3de"
